--- a/index.html
+++ b/index.html
@@ -41,8 +41,67 @@
             <button class="btn btn-dark">Join Now</button>
           </li>
         </ul>
+        s
       </div>
     </nav>
+    <!-- Box A -->
+    <section class="box box-a bg-primary text-center py-md">
+      <div class="box-inner">
+        <h2 class="test-xl">Jingle all the way is feast for favorites</h2>
+        <p class="text-md">
+          <a href="#">Learn more...</a>
+        </p>
+      </div>
+    </section>
+    <!-- box b -->
+    <section class="box box-b bg-secondary grid-col-2">
+      <img src="img/box-b.png" alt="" />
+      <div class="box-text">
+        <h2 class="text-xl">New to the nice list</h2>
+        <p class="text-md">
+          Corporate death cuppa. They refer to dried blood as 'coffee grounds'
+          for good reason....
+        </p>
+        <a href="#" class="btn btn-light-outline">Order Now</a>
+      </div>
+    </section>
+    <!-- box c -->
+    <section class="box box-c bg-secondary grid-col-2 grid-reversed">
+      <img src="img/box-c.png" alt="" />
+      <div class="box-text">
+        <h2 class="text-xl">Merry Moment</h2>
+        <p class="text-md">
+          Pretend you have style. Pretend you have taste. Pretend you're not
+          another fucking drone. Pretend....
+        </p>
+        <a href="#" class="btn btn-light-outline">Order Now</a>
+      </div>
+    </section>
+    <!-- box d -->
+    <section class="box box-d bg-primary grid-col-2">
+      <img src="img/box-d.png" alt="" />
+      <div class="box-text">
+        <h2 class="text-xl">Starbucks Thanksgiving Blend</h2>
+        <p class="text-md">
+          Sometimes killing a Turkey isn't enough. Sometimes a native genocide
+          to found a new England isn't enough. Coffee with that???
+        </p>
+        <a href="#" class="btn btn-light-outline">Order Now</a>
+      </div>
+    </section>
+    <!-- box e -->
+    <section class="box box-e bg-secondary grid-col-2 grid-reversed">
+      <img src="img/box-e.jpg" alt="" />
+      <div class="box-text">
+        <h2 class="text-md">Fighting Hunger</h2>
+        <p class="text-md">
+          Hunger is affecting millions. So buy coffeee and save lives.
+          Capatalism is caring. Be the difference you want to make - with added
+          Espresso
+        </p>
+        <a href="#" class="btn btn-light-outline">Order Now</a>
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
